dump.ejs: Changed text

--- a/templates/dump.ejs
+++ b/templates/dump.ejs
@@ -5,7 +5,7 @@
 <title>Dump <%= dump.name %></title>
 </head>
 <body>
-  <h1>Dump <%= dump.name %></h1>
-  This dump was uploaded to <a href="<%= baseUrl %><%= dump.url %>">dmpster</a>.
+  <h1><%= dump.name %></h1>
+  This crash dump was uploaded to <a href="<%= baseUrl %><%= dump.url %>">dmpster</a>.
 </body>
 </html>
