Option -s <filename> to write summary HTML file

--- a/templates/dump.ejs
+++ b/templates/dump.ejs
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1><%= dump.name %></h1>
-  This crash dump was uploaded to <a href="<%= baseUrl %><%= dump.url %>">dmpster</a>.
+  This crash dump was uploaded to <a href="<%= dump.url %>">dmpster</a>.
 </body>
 </html>
